# articles-api

./: .env  .flake8  Dockerfile  Makefile  README.md  docker-compose.testing.yml  docker-compose.yml  mypy.ini  pyproject.toml
articles/: __init__.py  datatypes.py
articles/api/: __init__.py  auth.py  hooks.py  response.py  schema.py
articles/dal/: __init__.py  db.py  exception.py  model.py  repository.py
db/: schema.sql
db/migrations/: 20220601120839_articles_table.sql
tests/: conftest.py
tests/api/hooks/: conftest.py  test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
tests/dal/: conftest.py
tests/dal/repository/: test_repository_delete.py  test_repository_get.py  test_repository_has.py  test_repository_insert.py  test_repository_list.py  test_repository_update.py
