[tool.poetry]
name = "py-example-articles"
version = "0.1.0"
description = "Articles API Server example"
authors = ["Dmitry Sergeev <sergeev@reg.ru>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.1"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
