[tool.poetry]
name = "py-example-articles"
version = "0.1.0"
description = "Articles API Server example"
authors = ["Dmitry Sergeev <sergeev@reg.ru>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.1"
aiomysql = "^0.1.1"
pytest = "^7.1.2"
requests = "^2.27.1"
pytest-asyncio = "^0.18.3"
httpx = "^0.23.0"
pytest-flake8 = "^1.1.1"
sqlalchemy-stubs = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
